# mos6502_emulator

./: .gitignore  CMakeLists.txt  README.md  mos6502.cpp  mos6502.hpp
example/: CMakeLists.txt  main.c  test.asm
include/: addressmodes.h  adressmodes.h  cpu.h  instructions.h  macros.h  mos6502.h  types.h
pkg-config/: 6502Cpu.pc.in
src/: addressmodes.c  cpu.c  instructions.c  main.c
